corrects image alignment and finalizes the html, css and readme.
coauthored by: Ethan Firpo <efirpo@gmail.com>

--- a/CSS/styles.css
+++ b/CSS/styles.css
@@ -14,3 +14,7 @@ h2.intro {
   font-variant: small-caps;
   text-align: center;
 }
+
+h1 {
+  text-align: center;
+}
